--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "combined-stream": "^1.0.5",
     "command-exists": "^1.2.9",
     "download-file-sync": "^1.0.4",
+    "flyingdev-pelias-dbclient-opensearch": "^0.0.0-development",
     "iso3166-1": "^0.5.0",
     "lodash": "^4.5.1",
     "pelias-blacklist-stream": "^1.3.0",
     "pelias-config": "^6.0.0",
-    "pelias-dbclient": "^3.1.0",
     "pelias-logger": "^1.6.0",
     "pelias-model": "^10.6.0",
     "through2": "^3.0.0",
